--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Encryption\Encryption.csproj" />
+    <ProjectReference Include="..\NetworkCommon\NetworkCommon.csproj" />
+  </ItemGroup>
+
 </Project>
