--- a/Client/Subscriber.csproj
+++ b/Client/Subscriber.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>Subscriber</AssemblyName>
+    <RootNamespace>Subscriber</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Encryption\Encryption.csproj" />
     <ProjectReference Include="..\NetworkCommon\NetworkCommon.csproj" />
   </ItemGroup>
 
