--- a/NetworkCommon/NetworkCommon.csproj
+++ b/NetworkCommon/NetworkCommon.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Data\NetworkConsts.cs" />
     <Compile Include="Data\PacketHandler.cs" />
     <Compile Include="Extensions\NetworkStreamUtil.cs" />
+    <Compile Include="Extensions\StringUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
