--- a/NetworkCommon/NetworkCommon.csproj
+++ b/NetworkCommon/NetworkCommon.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,12 +44,14 @@
   <ItemGroup>
     <Compile Include="Connection\ConnectionClient.cs" />
     <Compile Include="Connection\ConnectionHelper.cs" />
+    <Compile Include="Data\MessagePacket.cs" />
     <Compile Include="Data\NetworkConsts.cs" />
-    <Compile Include="Data\PacketHandler.cs" />
     <Compile Include="Extensions\NetworkStreamUtil.cs" />
     <Compile Include="Extensions\StringUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
